added fadeIn effect

--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
 
 <title>lfortin.github.com</title>
 
+<script type="text/javascript" src="jquery-1.4.2.min.js"></script>
+
+<script type="text/javascript">
+jQuery(function($) {
+  $('#wrapper').fadeIn(2000);
+});
+</script>
+
 </head>
 
 
 <body>
 
-<p><span style="font-size: 120px;">Laurent Fortin</span></p>
-<p><span style="font-size: 30px;">Web Developer and JavaScript Specialist</span></p>
-<p><span style="font-size: 30px;">laurentfortin@hotmail.com</span></p>
+<div id="wrapper" style="text-align: center; margin-top: 120px; display: none;">
+  <p><span style="font-size: 120px;">Laurent Fortin</span></p>
+  <p><span style="font-size: 30px;">Web Developer and JavaScript Specialist</span></p>
+  <p><span style="font-size: 30px;">laurentfortin@hotmail.com</span></p>
+</div>
 
 </body>
 
