--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <title>lfortin.github.com</title>
 
-<script type="text/javascript" src="jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="/js/jquery-1.4.2.min.js"></script>
 
 <script type="text/javascript">
 jQuery(function($) {
