added link to GitHub project

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ jQuery(function($) {
   <p><span style="font-size: 120px;">Laurent Fortin</span></p>
   <p><span style="font-size: 30px;">Web Developer and JavaScript Specialist</span></p>
   <p><span style="font-size: 30px;">laurentfortin@hotmail.com</span></p>
+  <p><span style="font-size: 30px;">&nbsp;</span></p>
+  <p><span style="font-size: 30px;">GitHub project: <a href="http://github.com/lfortin/drive-jquery-plugin" target="_blank">Drive jQuery plugin</a></span></p>
 </div>
 
 </body>
