--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@ jQuery(function($) {
 <body>
 
 <div id="wrapper" style="text-align: center; margin-top: 120px; display: none;">
-  <p><span style="font-size: 90px;">Laurent Fortin</span></p>
+  <p><span style="font-size: 60px;">Laurent Fortin</span></p>
   <p><span style="font-size: 30px;">Web Developer and JavaScript Specialist</span></p>
   <p><span style="font-size: 30px;">laurentfortin@hotmail.com</span></p>
   <p><span style="font-size: 30px;">&nbsp;</span></p>
-  <p><span style="font-size: 30px;">GitHub project: <a href="http://github.com/lfortin/drive-jquery-plugin" target="_blank">Drive jQuery plugin</a></span></p>
+  <p><span style="font-size: 30px;">-GitHub projects-</span></p>
+  <p><span style="font-size: 30px;"><a href="http://github.com/lfortin/drive-jquery-plugin" target="_blank">Drive jQuery plugin</a></span></p>
+  <p><span style="font-size: 30px;"><a href="http://github.com/lfortin/node-os-monitor" target="_blank">os-monitor for Node.js</a></span></p>
 </div>
 
 </body>
