added link to stream-tk project

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ jQuery(function($) {
   <p><span style="font-size: 30px;">-GitHub projects-</span></p>
   <p><span style="font-size: 30px;"><a href="http://github.com/lfortin/drive-jquery-plugin" target="_blank">Drive jQuery plugin</a></span></p>
   <p><span style="font-size: 30px;"><a href="http://github.com/lfortin/node-os-monitor" target="_blank">os-monitor for Node.js</a></span></p>
+  <p><span style="font-size: 30px;"><a href="http://github.com/lfortin/node-stream-tk" target="_blank">stream-tk: toolkit for handling data streams in Node.js</a></span></p>
 </div>
 
 </body>
