added RequireJS + libraries

--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
 
 <title>lfortin.github.com</title>
 
-<script type="text/javascript" src="/js/jquery-1.4.2.min.js"></script>
-
-<script type="text/javascript">
-jQuery(function($) {
-  $('#wrapper').fadeIn(2000);
-});
-</script>
+<script type="text/javascript" data-main="./js/main" src="./js/lib/require-min.js"></script>
 
 </head>
 
