--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <title>lfortin.github.com</title>
 
+<link rel="stylesheet" type="text/css" href="./css/main.css" />
 <script type="text/javascript" data-main="./js/main" src="./js/lib/require-min.js"></script>
 
 </head>
@@ -14,15 +15,15 @@
 
 <body>
 
-<div id="wrapper" style="text-align: center; margin-top: 120px; display: none;">
-  <p><span style="font-size: 60px;">Laurent Fortin</span></p>
-  <p><span style="font-size: 30px;">Web Developer and JavaScript Specialist</span></p>
-  <p><span style="font-size: 30px;">laurentfortin@hotmail.com</span></p>
-  <p><span style="font-size: 30px;">&nbsp;</span></p>
-  <p><span style="font-size: 30px;">-GitHub projects-</span></p>
-  <p><span style="font-size: 30px;"><a href="http://github.com/lfortin/drive-jquery-plugin" target="_blank">Drive jQuery plugin</a></span></p>
-  <p><span style="font-size: 30px;"><a href="http://github.com/lfortin/node-os-monitor" target="_blank">os-monitor for Node.js</a></span></p>
-  <p><span style="font-size: 30px;"><a href="http://github.com/lfortin/node-stream-tk" target="_blank">stream-tk: toolkit for handling data streams in Node.js</a></span></p>
+<div id="wrapper">
+  <p><span>Laurent Fortin</span></p>
+  <p><span>Web Developer and JavaScript Specialist</span></p>
+  <p><span>laurentfortin@hotmail.com</span></p>
+  <p><span>&nbsp;</span></p>
+  <p><span>-GitHub projects-</span></p>
+  <p><span><a href="http://github.com/lfortin/drive-jquery-plugin" target="_blank">Drive jQuery plugin</a></span></p>
+  <p><span><a href="http://github.com/lfortin/node-os-monitor" target="_blank">os-monitor for Node.js</a></span></p>
+  <p><span><a href="http://github.com/lfortin/node-stream-tk" target="_blank">stream-tk: toolkit for handling data streams in Node.js</a></span></p>
 </div>
 
 </body>
