--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   <p><span><a href="http://github.com/lfortin/drive-jquery-plugin" target="_blank">Drive jQuery plugin</a></span></p>
   <p><span><a href="http://github.com/lfortin/node-os-monitor" target="_blank">os-monitor for Node.js</a></span></p>
   <p><span><a href="http://github.com/lfortin/node-stream-tk" target="_blank">stream-tk: toolkit for handling data streams in Node.js</a></span></p>
+  <p><span>&nbsp;</span></p>
+  <p><span>Skills:</span></p>
+  <p><span id="carousel">&nbsp;</span></p>
 </div>
 
 </body>
