--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="wrapper">
   <p><span>Laurent Fortin</span></p>
   <p><span>Web Developer and JavaScript Specialist</span></p>
-  <p><span>laurentfortin@hotmail.com</span></p>
+  <p><span><a href="mailto:laurent.fortin@gmail.com">laurent.fortin@gmail.com</a></span></p>
   <p><span>&nbsp;</span></p>
   <p><span>-GitHub projects-</span></p>
   <p><span><a href="http://github.com/lfortin/drive-jquery-plugin" target="_blank">Drive jQuery plugin</a></span></p>
