--- a/index.html
+++ b/index.html
@@ -1,35 +1,46 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
-<title>lfortin.github.com</title>
-
-<link rel="stylesheet" type="text/css" href="./css/main.css" />
-<script type="text/javascript" data-main="./js/main" src="./js/lib/require-min.js"></script>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Laurent Fortin - Web Developer and JavaScript Specialist</title>
+    <style type="text/css">
+        body {
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f0f0f0;
+        }
+        .centered-div {
+            background-color: rgb(212, 223, 252);
+            border-radius: 15px;
+            padding: 20px;
+            width: 80%;
+            max-width: 600px;
+            text-align: left;
+            font-size: 20px;
+    </style>
+    <script src="qrcode.js"></script>
 </head>
-
-
 <body>
-
-<div id="wrapper">
-  <p><span>Laurent Fortin</span></p>
-  <p><span>Web Developer and JavaScript Specialist</span></p>
-  <p><span><a href="mailto:laurent.fortin@gmail.com">laurent.fortin@gmail.com</a></span></p>
-  <p><span>&nbsp;</span></p>
-  <p><span>-GitHub projects-</span></p>
-  <p><span><a href="http://github.com/lfortin/drive-jquery-plugin" target="_blank">Drive jQuery plugin</a></span></p>
-  <p><span><a href="http://github.com/lfortin/node-os-monitor" target="_blank">os-monitor for Node.js</a></span></p>
-  <p><span><a href="http://github.com/lfortin/node-stream-tk" target="_blank">stream-tk: toolkit for handling data streams in Node.js</a></span></p>
-  <p><span>&nbsp;</span></p>
-  <p><span>Skills:</span></p>
-  <p><span id="carousel">&nbsp;</span></p>
-</div>
-
+  <div class="centered-div">
+      <h2>Laurent Fortin</h2>
+      <h3>Web Developer and JavaScript Specialist</h3>
+      <p>
+        Email: <a href="mailto:laurent.fortin@gmail.com">laurent.fortin@gmail.com</a><br />
+        GitHub: <a href="https://github.com/lfortin" target="_blank">https://github.com/lfortin</a><br />
+        LinkedIn: <a href="https://www.linkedin.com/in/laurent-fortin-7095043" target="_blank">https://www.linkedin.com/in/laurent-fortin-7095043</a><br /><br />
+        <canvas id="canvas"></canvas>
+      </p>
+  </div>
+  <script type="application/javascript">
+    QRCode.toCanvas(document.getElementById('canvas'), 'https://www.linkedin.com/in/laurent-fortin-7095043', function (error) {
+      if (error) {
+        console.error(error);
+      }
+    });
+  </script>
 </body>
-
-
 </html>
