--- a/index.html
+++ b/index.html
@@ -1,70 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laurent Fortin - Web Developer and JavaScript Specialist</title>
-    <style type="text/css">
-      body {
-        margin: 0;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #f0f0f0;
-      }
-      .centered-div {
-        background-color: rgb(212, 223, 252);
-        border-radius: 15px;
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Laurent Fortin - Web Developer and JavaScript Specialist</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #eef1f7;
+      font-family: 'Inter', sans-serif;
+    }
+
+    .card {
+      background: #ffffff;
+      border-radius: 15px;
+      padding: 30px;
+      max-width: 500px;
+      width: 90%;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    .card h2 {
+      margin-top: 0;
+      font-size: 26px;
+      color: #2c3e50;
+    }
+
+    .card h3 {
+      margin-top: 5px;
+      font-weight: 400;
+      font-size: 18px;
+      color: #4b5563;
+    }
+
+    .card p {
+      font-size: 16px;
+      line-height: 1.6;
+      color: #333;
+    }
+
+    .card a {
+      color: #1d4ed8;
+      text-decoration: none;
+      word-break: break-all;
+    }
+
+    .card a:hover {
+      text-decoration: underline;
+    }
+
+    .qr-container {
+      margin-top: 20px;
+    }
+
+    canvas {
+      margin-top: 10px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      padding: 10px;
+      background-color: #fafafa;
+    }
+
+    @media (max-width: 500px) {
+      .card {
         padding: 20px;
-        width: 80%;
-        max-width: 600px;
-        text-align: left;
-        font-size: 20px;
       }
 
-      @media (max-width: 600px) {
-        .centered-div {
-          padding: 15px;
-          font-size: 14px;
-        }
+      .card h2 {
+        font-size: 22px;
       }
-    </style>
-    <script src="qrcode.js"></script>
-  </head>
-  <body>
-    <div class="centered-div">
-      <h2>Laurent Fortin</h2>
-      <h3>Web Developer and JavaScript Specialist</h3>
-      <p>
-        Email:
-        <a href="mailto:laurent.fortin@gmail.com">laurent.fortin@gmail.com</a
-        ><br />
-        GitHub:
-        <a href="https://github.com/lfortin" target="_blank"
-          >https://github.com/lfortin</a
-        ><br />
-        LinkedIn:
-        <a
-          href="https://www.linkedin.com/in/laurent-fortin-7095043"
-          target="_blank"
-          >https://www.linkedin.com/in/laurent-fortin-7095043</a
-        ><br /><br />
-        <a href="/portfolio" target="_blank">Portfolio</a>
-        <br /><br />
-        <canvas id="canvas"></canvas>
-      </p>
+
+      .card h3 {
+        font-size: 16px;
+      }
+
+      .card p {
+        font-size: 14px;
+      }
+    }
+  </style>
+  <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
+</head>
+<body>
+  <div class="card">
+    <h2>Laurent Fortin</h2>
+    <h3>Web Developer & JavaScript Specialist</h3>
+    <p>
+      📧 <a href="mailto:laurent.fortin@gmail.com">laurent.fortin@gmail.com</a><br/>
+      🐙 <a href="https://github.com/lfortin" target="_blank">github.com/lfortin</a><br/>
+      💼 <a href="https://www.linkedin.com/in/laurent-fortin-7095043" target="_blank">linkedin.com/in/laurent-fortin-7095043</a><br/><br/>
+      🗂️ <a href="/portfolio" target="_blank">View Portfolio</a>
+    </p>
+    <div class="qr-container">
+      <p>Scan to visit my LinkedIn:</p>
+      <canvas id="canvas"></canvas>
     </div>
-    <script type="application/javascript">
-      QRCode.toCanvas(
-        document.getElementById("canvas"),
-        "https://www.linkedin.com/in/laurent-fortin-7095043",
-        function (error) {
-          if (error) {
-            console.error(error);
-          }
-        }
-      );
-    </script>
-  </body>
+  </div>
+
+  <script>
+    QRCode.toCanvas(
+      document.getElementById("canvas"),
+      "https://www.linkedin.com/in/laurent-fortin-7095043",
+      function (error) {
+        if (error) console.error(error);
+      }
+    );
+  </script>
+</body>
 </html>
