use local qrcode.js

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       }
     }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
+  <script src="/qrcode.js"></script>
 </head>
 <body>
   <div class="card">
