--- a/os-monitor/index.html
+++ b/os-monitor/index.html
@@ -18,5 +18,6 @@
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code@3/dist/docsify-copy-code.min.js"></script>
 </body>
 </html>
